# Assignment4

./: CMakeLists.txt  main.cpp
include/Book/: Book.h
include/Manager/: BookManager.h  BorrowManager.h
src/Book/: Book.cpp
src/Manager/: BookManager.cpp  BorrowManager.cpp
util/: Validation.h
